# DEC

./: README.md
DEC_arm_vision/: CMakeLists.txt  test.cpp
DEC_arm_vision/cmake/: FindPylon.cmake
DEC_arm_vision/headers/: socket.hpp
DEC_arm_vision/src/: DEC_vision.cpp  main.cpp  socket.cpp
DEC_displacement/: README.md
DEC_displacement/detect_jetson/: CMakeLists.txt
DEC_displacement/detect_jetson/include/: socket.hpp
DEC_displacement/detect_jetson/src/: main.cpp  txt_option.cpp
DEC_displacement/detect_jetson/src/src/: main.cpp  socket.cpp
DEC_displacement/test/: CMakeLists.txt  info.txt  main.cpp  txt_option.hpp
DEC_displacement/test.xcodeproj/: project.pbxproj
DEC_displacement/test.xcodeproj/project.xcworkspace/xcuserdata/zhouweijie.xcuserdatad/: UserInterfaceState.xcuserstate
DEC_robotic/: CMakeLists.txt
DEC_robotic/headers/: DEC_vision.hpp
DEC_ros_car/model/: robotic(car).step  上后盖3d.step  上盖连接板lb4.step  下中心框3d.step  下后盖3d.step  主框架.step  从动轮轴3d2.step  动力内侧板txw2.step  动力外侧板txw2.step  动力盖3d2.step  轴套3d2.step  连接板lb2.step
bolt_detect/: README.md  detect.py  main.cpp  socket.hpp
bolt_detect/Bolt_detect_jetson/: CMakeLists.txt
bolt_detect/Bolt_detect_jetson/PyDescribe/: detect.py
bolt_detect/Bolt_detect_jetson/include/: match.hpp
bolt_detect/Bolt_detect_jetson/src/: main.cpp  match.cpp
bolt_detect/Grab.xcodeproj/: project.pbxproj
bolt_detect/Grab.xcodeproj/project.xcworkspace/xcuserdata/zhouweijie.xcuserdatad/: UserInterfaceState.xcuserstate
bolt_detect/Grab.xcodeproj/xcuserdata/zhouweijie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
bolt_detect/bolt_detect/: main.cpp
bolt_detect/bolt_detect.xcodeproj/: project.pbxproj
bolt_detect/bolt_detect.xcodeproj/project.xcworkspace/xcuserdata/zhouweijie.xcuserdatad/: UserInterfaceState.xcuserstate
bolt_detect/bolt_detect.xcodeproj/xcuserdata/zhouweijie.xcuserdatad/xcschemes/: xcschememanagement.plist
bolt_detect/headers/: TCPClient.hpp
bolt_detect/src/: Grab.cpp  TCPClient.cpp  socket.cpp  test].cpp  test].hpp
hikcamera/edge_detection/: main.cpp  main.hpp
hikcamera/test/: hk_camera.cpp  hk_camera.hpp  main.cpp  match.cpp  test.cpp
hikcamera/test.xcodeproj/: project.pbxproj
hikcamera/test.xcodeproj/project.xcworkspace/xcuserdata/zhouweijie.xcuserdatad/: UserInterfaceState.xcuserstate
hikcamera/test.xcodeproj/xcshareddata/xcschemes/: test.xcscheme
hikcamera/test.xcodeproj/xcuserdata/zhouweijie.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
hikcamera/test.xcodeproj/xcuserdata/zhouweijie.xcuserdatad/xcschemes/: xcschememanagement.plist
